Linted code and added a README
I am having this be cpu only because i could not get my gpu code to run
nearly as fast as the cpu.

--- a/test_enviorment/Cargo.toml
+++ b/test_enviorment/Cargo.toml
@@ -7,3 +7,15 @@ edition = "2021"
 rand = "0.9.1"
 
 nn_library = { path = "../nn_library" }
+
+[lints.clippy]
+needless_return = "allow"
+needless_range_loop = "allow"
+
+unwrap_used = "deny"
+expect_used = "deny"
+panic = "deny"
+
+redundant_clone = "deny"
+implicit_clone = "deny"
+cloned_instead_of_copied = "deny"
