--- a/rust_nn/Cargo.toml
+++ b/rust_nn/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+base64 = "0.22.0"
+
 tch = "0.20"
 
 [lints.clippy]
